--- a/config
+++ b/config
@@ -1,17 +1,17 @@
+DEBUG=${DEBUG:="0"}
+
 IMG_NAME=Pip
+USE_QCOW2=0
 RELEASE=buster
 DEPLOY_ZIP=0
 TARGET_HOSTNAME=pip
 FIRST_USER_NAME=pip
+STAGE_LIST="stage0 stage1 stage2 pip"
 
 if [ "$DEBUG" = "1" ]; then
-	echo "DEBUG MODE ENABLED"
 	FIRST_USER_PASS=blueberry
 	ENABLE_SSH=1
-	STAGE_LIST="stage0 stage1 stage2 pip-after pip-debug"
 else
 	FIRST_USER_PASS=veTie7oit0uajaeVoo3Shidoohi7coof
 	ENABLE_SSH=0
-	STAGE_LIST="stage0 stage1 stage2 pip-after"
 fi
-
